# sylo-desktop

./: .env.example  .gitignore  installer.iss  requirements.txt
src/: main.py  pyproject.toml  router.py  test.py  variables.py
src/components/: body_shape_background.py  button.py  camera_background.py  covered_overlay.py  fitting_container.py  splash_screen.py  textbox.py  watermark.py
src/pages/: fitting_result.py  fitting_view.py  input_name.py  intro.py  next_menu.py  scan_body.py  scan_result.py  select_color.py  select_fitting_type.py  select_gender.py  select_style.py  send_image.py
src/utils/: camera.py  camerav2.py  classify.py  draw_pose.py  image.py  keyboard.py
