[project]
name = "sylo"
version = "1.0.0"
description = "Sylo app"

[tool.flet]
project   = "sylo"
product   = "Sylo"
bundle_id = "tech.java2.sylo"
org = "tech.java2"

[tool.flet.compile]
app      = true
packages = false
cleanup  = false

[tool.flet.app]
module = "main"
path   = "."

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"
